# outlook_rwa

./: .coveragerc  .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  README.md  REVIEW.md  REVIEW_CHECKLIST.md  __do_git.py  __git_log.txt  __git_tmp.txt  chat_session2.json  compare_outputs.py  config.toml  create_mock_data.py  environment.yml  instructions.env  print_env.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/hooks/: session-start.sh
config/: config.yaml  example.yaml
docs/: DECISION_LOG.md  REFACTOR_PLAN.md  REGENERATION_PROMPT.md  dynamic_rwf_keys.md
logs/: column_mapping_balance_sheet_cg.csv  column_mapping_convergence.csv  column_mapping_pmf_rwa_mapping.csv  column_mapping_pug_mapping.csv  column_mapping_quarter_map.csv
original/: config.toml  constants.py  create_schema_csv.py  dynamic_rwf_keys.md  functions.py  step1_model_convergence.py  step2_outlook_rwa.py
revised/: config.toml  dynamic_rwf_keys.md  functions.py  step1_model_convergence.py
scripts/: create_mock_data.py  create_schema_csv.py  generate_sql.py  load_oracle.py  oracle_ddl.py  print_env.py  run_duckdb_pipeline.py  sql_fixture.py  update.sh
sql/: addon_pivot.sql  control_summary.sql  conv_credit_risk.sql  conv_markets_addon.sql  conv_non_waterfall.sql  frm_base.sql  outlook_long.sql  outlook_rwa.sql  outlook_with_keys.sql  outlook_with_rwf.sql  upload_template_pivot.sql  waterfall_rwf.sql
sql/oracle/: ddl_balance_sheet_cbna.sql  (+5 more)
test/: conftest.py  test_dq.py  test_functions.py  test_integration.py  test_sql_pipeline.py
(+28 files in other folders)
